fix header spacing a bit

--- a/mystyle/static/css/main.less
+++ b/mystyle/static/css/main.less
@@ -100,13 +100,14 @@ h6 {font-size: 1em}		/* 14px */
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
     font-style: normal;
-	line-height: 50px;
+	//line-height: 50px;
 	/*margin-bottom: .8em;*/
     font-family: @headline-font;
 }
 
 h1, h3, h4, h5, h6 {
-    margin-top: .8em;
+    margin-top: 1em;
+    margin-bottom: 0.3em;
 }
 
 /* Anchors */
